--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,59 +1,66 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.min.css">
-        <link rel="stylesheet" href="{{asset('assests/css/style.css')}}">
-        {% block stylesheets %}
-        {% endblock %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Architecte</title>
+      {% block stylesheets %}
+      {% endblock %}
 
-        {% block javascripts %}
-        {% endblock %}
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="{{path('app_home')}}">Home</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarColor01">
-              <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">Home
-                    <span class="visually-hidden">(current)</span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{{path('produit')}}">Produit</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{{path('afficheproduit')}}">Afficher produit</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Separated link</a>
-                  </div>
-                </li>
-              </ul>
-              <form class="d-flex">
-                <input class="form-control me-sm-2" type="search" placeholder="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-              </form>
-            </div>
+      {% block javascripts %}
+      {% endblock %}
+</head>
+<body>
+
+  <header>
+      <nav>
+          <ul>
+              <li><a href="">Projects</a></li>
+              <li><a href="">About</a></li>
+              <li><a href="">Contact</a></li>
+          </ul>
+      </nav>
+      <h1 class="logo">BR Architects</h1>
+      <div class="PrincipaleImg">
+          <img class="ImgHeader" src="img/architect.jpg" alt="">
+          <h1>BR Architects</h1>
+      </div>
+  </header>
+
+  <section>
+    <div class="bas">
+      <div class="Projects">
+          <h2>Projects</h2>
+          <div>
+              <img src="" alt="">
           </div>
-        </nav>
-    </body>
+          <div>
+              <img src="img/house2.jpg" alt="">
+          </div>
+          <div>
+              <img src="img/house5.jpg" alt="">
+          </div>
+          <div>
+              <img src="img/house4.jpg" alt="">
+          </div>
+          <div>
+              <img src="img/house2.jpg" alt="">
+          </div>
+          <div>
+              <img src="img/house5.jpg" alt="">
+          </div>
+          <div>
+              <img src="img/house4.jpg" alt="">
+          </div>
+          <div>
+              <img src="img/house3.jpg" alt="">
+          </div>
+      </div>
+    </div>
+  </section>
     {% block body %}
     {% endblock %}
+</body>
 </html>
