--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,13 +24,13 @@
       </nav>
       <h1 class="logo">BR Architects</h1>
       <div class="PrincipaleImg">
-          <img class="ImgHeader" src="img/architect.jpg" alt="">
+          <img class="ImgHeader" src="{{asset('assests/image/architect.jpg')}}" alt="">
           <h1>BR Architects</h1>
       </div>
   </header>
 
   <section>
-    <div class="bas">
+    <div class="haut">
       <div class="Projects">
           <h2>Projects</h2>
           <div>
