--- a/public/assests/css/style.css
+++ b/public/assests/css/style.css
@@ -1,5 +1,91 @@
-body{
-    background: url("../image/agence.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+.logo{
+    position: absolute;
+    top: 22px;
+    left: 25px;
+}
+
+nav{
+   position: absolute;
+   width: 100%;
+   height: 50px;
+   background: rgb(255, 255, 255);
+}
+
+/* ul a 20% car le left et de 20% sinon sa agrandi nav*/
+
+ul{
+    position: relative;
+    top: 22px;
+    width: 20%;
+    left: 80%;
+}
+
+li{
+    display: inline;
+    margin-right: 40px;
+}
+
+li a{
+    text-decoration: none;
+    color: black;
+    transition: 1s;
+}
+
+li a:hover{
+    color: rgb(189, 189, 189);
+    transition: 1s;
+}
+
+.ImgHeader{
+    position: relative;
+    top: 62px;
+    width: 100%;
+    height: auto;
 }
