--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,30 +33,19 @@
     <div class="haut">
       <div class="Projects">
           <h2>Projects</h2>
-          <div>
-              <img src="" alt="">
-          </div>
-          <div>
-              <img src="img/house2.jpg" alt="">
-          </div>
-          <div>
-              <img src="img/house5.jpg" alt="">
-          </div>
-          <div>
-              <img src="img/house4.jpg" alt="">
-          </div>
-          <div>
-              <img src="img/house2.jpg" alt="">
-          </div>
-          <div>
-              <img src="img/house5.jpg" alt="">
-          </div>
-          <div>
-              <img src="img/house4.jpg" alt="">
-          </div>
-          <div>
-              <img src="img/house3.jpg" alt="">
-          </div>
+          <img class="Hak_Image" src="{{asset('assests/image/house2.jpg')}}" alt="">
+          <img class="Hak_Image" src="{{asset('assests/image/house5.jpg')}}" alt="">
+          <img class="Hak_Image" src="{{asset('assests/image/house4.jpg')}}" alt="">
+          <img class="Hak_Image" src="{{asset('assests/image/house2.jpg')}}" alt="">
+
+          <img class="Hak_Image" src="{{asset('assests/image/house5.jpg')}}" alt="">
+
+          <img class="Hak_Image" src="{{asset('assests/image/house4.jpg')}}" alt="">
+
+          <img class="Hak_Image" src="{{asset('assests/image/house3.jpg')}}" alt="">
+
+          <img class="Hak_Image" src="{{asset('assests/image/house5.jpg')}}" alt="">
+ 
       </div>
     </div>
   </section>
