--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,7 @@
 					<li><a href="">Projects</a></li>
 					<li><a href="">About</a></li>
 					<li><a href="">Contact</a></li>
+					<li><a href="{{path('afficheproduit')}}">Afficher produit</a></li>
 				</ul>
 			</nav>
 			<h1 class="logo">BR Architects</h1>
@@ -140,6 +141,7 @@
 				</div>
 			</div>
 		</section>
+
 
 		<footer>
 			<div class="power">
