--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -4,4 +4,15 @@
 
 {% block body %}
 <h1>Mes produits</h1>
+
+{% for prod in prods %}
+
+
+    <div class="alert alert-dismissible alert-danger">
+        <button type="button"></button>
+    
+        <p>{{prod.NomProduit}}</p>
+        <p>{{prod.Categorie}}</p>
+    </div>
+{% endfor %}
 {% endblock %}
