--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -4,7 +4,21 @@
 
 {% block body %}
 {{form_start(formulaire)}}
-{{form_widget(formulaire)}}
+
+
+<div class="case"><input type="text" name="name" class="name" placeholder="Name"><br>
+	<div class="email">
+        {{form_widget(formulaire.email)}}
+    </div>
+
+    <div class="subject">
+        {{form_widget(formulaire.subject)}}
+    </div>
+
+    <div class="comment">
+        {{form_widget(formulaire.comment)}}
+    </div>
+</div>
 
 <button type="submit">envoyer</button>
 {{form_end(formulaire)}}
